# ctdpy

./: .gitignore  README.md  README.rst  READMEpypi.rst  ctdpy_class_diagram.plantuml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
ctdpy/: __init__.py  config.py
ctdpy/core/: __init__.py  archive_handler.py  calculator.py  config.py  ctd_profile.py  data_handlers.py  log.txt  mapping.py  profile.py  session.py  tile.html  utils.py
ctdpy/docs/: Slutrapport_180118.docx  Slutrapport_v0.docx
ctdpy/exports/: data.xlsx  standard_file_name.xlsx
ctdpy/templates/: Delivery_Template_CTD.xlsx  Delivery_Template_CTD_EMPTY.xlsx  Format CTD Profile.xlsx  Format Physical and chemical.xlsx  Format Profile - kopia.xlsx  Format Profile.xlsx  Leveransmall CTD.xlsx
ctdpy/tests/: UMSC_2019.html  __init__.py  app_to_serve.py  ctd_testing.py  embedding_bokeh_server.ipynb  jj_mvp_test.py  jj_testing.py  plot_std_ctd_format.ipynb  read_NOS_cnv_and_produce_metadata_template.py  read_SBcnv_and_produce_metadata_template.ipynb  read_SBcnv_and_produce_metadata_template.py  read_SMHI_delivery_and_produce_CTDstd_format.ipynb  read_SMHI_delivery_and_produce_CTDstd_format.py  read_ctd_stdfmt_and_get_lores_data_to_phyche_template.py  read_ctd_stdfmt_and_run_qc.ipynb  read_ctd_stdfmt_and_run_qc.py  read_ctd_stdfmt_and_run_unit_conversion.ipynb  read_ctd_stdfmt_and_run_unit_conversion.py  read_new_master_fmt.py  svea_2020.html  test.txt  test.xlsx  test_ctd_stdfmt_oclab_filename.py  test_new_ctdvis_model.py  test_new_smhi_reader_meta_txt.py  test_read_data.py  (+2 more)
(+2296 files in other folders)
