[project]
name = "ctdpy"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Johannes Johansson", email = "nodc@smhi.se"},
]
dependencies = [
    "pandas>=2.2.2",
    "gsw>=3.6.17",
    "seawater>=3.3.4",
    "pyyaml>=6.0.1",
    "trollsift>=0.5.1",
    "openpyxl>=3.1.2",
]
requires-python = "==3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]
